--- a/requirements.txt
+++ b/requirements.txt
@@ -1,140 +1,4 @@
-absl-py==2.1.0
-altair==5.4.1
-altgraph==0.17.4
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==24.2.0
-audioread==3.0.1
-blinker==1.9.0
-build==1.2.2.post1
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-Cython==3.0.11
-debugpy==1.8.7
-decorator==4.4.2
-executing==2.1.0
-ffmpeg-python==0.2.0
 Flask==3.0.3
-flatbuffers==24.3.25
-future==1.0.0
-gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.24.0
-google-api-python-client==2.159.0
-google-auth==2.37.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-google-pasta==0.2.0
-googleapis-common-protos==1.66.0
-grpcio==1.67.1
-h5py==3.12.1
-httplib2==0.22.0
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-iniconfig==2.0.0
-ipykernel==6.29.5
-ipython==8.28.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keras==3.6.0
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.10.2.post1
-llvmlite==0.43.0
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml-dtypes==0.4.1
-moviepy==1.0.3
-msgpack==1.1.0
 mutagen==1.47.0
-namex==0.0.8
-narwhals==1.13.5
-nest-asyncio==1.6.0
-numpy==2.0.2
-oauthlib==3.2.2
-opencv-python==4.11.0.86
-opt_einsum==3.4.0
-optree==0.13.1
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-pefile==2023.2.7
-pillow==10.4.0
-platformdirs==4.3.6
-pluggy==1.5.0
-pooch==1.8.2
-proglog==0.1.10
-prompt_toolkit==3.0.48
-proto-plus==1.25.0
-protobuf==5.28.3
-psutil==6.0.0
-pure_eval==0.2.3
-pyarrow==18.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.18.0
-pyinstaller==6.11.1
-pyinstaller-hooks-contrib==2024.10
-pyparsing==3.2.1
-pyproject_hooks==1.2.0
-pytest==8.3.3
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
-pywin32==308
-pywin32-ctypes==0.2.3
-pyzmq==26.2.0
-referencing==0.35.1
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.9.4
-rpds-py==0.21.0
-rsa==4.9
-scikit-learn==1.5.2
-scipy==1.14.1
-setuptools==75.5.0
-six==1.16.0
-smmap==5.0.1
-soundfile==0.12.1
-soxr==0.5.0.post1
-stack-data==0.6.3
-streamlit==1.40.1
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow_intel==2.18.0
-termcolor==2.5.0
-threadpoolctl==3.5.0
-tk==0.1.0
-toml==0.10.2
-tornado==6.4.1
-tqdm==4.67.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-uritemplate==4.1.1
-urllib3==2.2.3
-watchdog==6.0.0
-wcwidth==0.2.13
-Werkzeug==3.1.3
-wheel==0.45.0
-wrapt==1.16.0
+Pillow==10.4.0
+moviepy==1.0.3
